--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-color);
 }
-.link::after {
+.current::after {
   content: "";
   display: block;
   position: absolute;
@@ -116,16 +116,6 @@ p {
   background-color: var(--primary-color);
   margin-top: 29px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 0;
-}
-.link:hover::after,
-.link:focus::after {
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1;
-}
-.link:active::after {
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1;
 }
 .contacts {
   display: flex;
@@ -450,30 +440,6 @@ p {
 .clients-icon {
   fill: var(--primary-icon-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.ya {
-  width: 41px;
-  height: 47px;
-}
-.here {
-  width: 40px;
-  height: 52px;
-}
-.company {
-  width: 44px;
-  height: 42px;
-}
-.foster {
-  width: 85px;
-  height: 41px;
-}
-.brand {
-  width: 63px;
-  height: 46px;
-}
-.line {
-  width: 94px;
-  height: 44px;
 }
 .clients-link:hover,
 .clients-link:focus {
