--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ p {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--primary-color);
 }
+.current {
+  color: var(--primary-color);
+}
 .current::after {
   content: "";
   display: block;
